--- a/.env.local
+++ b/.env.local
@@ -27,3 +27,8 @@ APP_SECRET=351db4857cef9adf11649a4fc4f86b88
 DATABASE_URL="mysql://root:@127.0.0.1:3306/public_chat?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
+MAILER_DSN=smtp://5e8d943d0e0333:d1cb427ac29b7e@sandbox.smtp.mailtrap.io:2525
