--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,9 @@
         }
     },
     "require-dev": {
+        "symfony/debug-bundle": "5.4.*",
         "symfony/maker-bundle": "*",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/stopwatch": "5.4.*",
         "symfony/web-profiler-bundle": "5.4.*"
     }
