--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,8 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "dotenv": "^16.3.1",
         "vue-router": "^4.2.5",
         "vuex": "^4.0.2"
     }
 }
-
