--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.16",
         "lcobucci/jwt": "^4.0",
         "lexik/jwt-authentication-bundle": "*",
+        "nelmio/cors-bundle": "^2.3",
         "pentatrion/vite-bundle": "^4.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
