--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,13 @@
         "vue-loader": "^17.2.2"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-brands-svg-icons": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/vue-fontawesome": "^3.0.3",
         "@popperjs/core": "^2.11.8",
-        "dotenv": "^16.3.1",
+        "font-awesome": "^4.7.0",
+        "js-cookie": "^3.0.5",
         "vue-router": "^4.2.5",
         "vuex": "^4.0.2"
     }
